<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="425dp"
        android:background="@color/transparent"
        android:fontFamily="@font/gill_sans_bold"
        android:text="@string/register"
        android:textColor="@color/red"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <EditText
        android:id="@id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_baseline_face_24"
        android:drawableLeft="@drawable/ic_baseline_face_24"
        android:fontFamily="@font/gill_sans_bold"
        android:text="@string/username"
        android:textColor="@color/red"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register">

    </EditText>


    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:fontFamily="@font/gill_sans_bold"
        android:text="@string/password"
        android:textColor="@color/red"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/snake"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toTopOf="@id/username"
        android:layout_marginBottom="100dp">

    </EditText>

    <Button
        android:id="@+id/log_in_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintBottom_toTopOf="@id/snake"
        app:layout_constraintStart_toStartOf="@id/password"
        app:layout_constraintEnd_toEndOf="@id/password"
        android:text="Register"
        android:fontFamily="@font/gill_sans_bold"
        android:textColor="@color/red"
        android:textSize="20sp">

    </Button>

    <ImageView
        android:id="@+id/apple"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/apple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </ImageView>

    <ImageView
        android:id="@+id/snake"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:paddingEnd="-50dp"
        android:paddingRight="-50dp"
        android:paddingBottom="-50dp"
        android:src="@drawable/ic_snake"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlSymmetry">

    </ImageView>

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/left_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/apple"
        app:layout_constraintEnd_toEndOf="@+id/apple"
        app:layout_constraintStart_toStartOf="@+id/apple"
        app:layout_constraintTop_toTopOf="@+id/apple">

    </ImageView>

</androidx.constraintlayout.widget.ConstraintLayout>