<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/apple"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/apple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp">

    </ImageView>

    <ImageView
        android:id="@+id/snake"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/ic_snake"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingRight="-50dp"
        android:paddingBottom="-50dp"
        android:paddingEnd="-50dp"
        tools:ignore="RtlSymmetry">

    </ImageView>

    <ImageView
        android:id="@+id/brain"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/artificial_brain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/left_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/apple"
        app:layout_constraintEnd_toEndOf="@+id/apple"
        app:layout_constraintStart_toStartOf="@+id/apple"
        app:layout_constraintTop_toTopOf="@+id/apple"
        android:layout_marginTop="10dp">

    </ImageView>

    <Button
        android:id="@+id/menu_op2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/brain"
        app:layout_constraintBottom_toBottomOf="@+id/brain"
        app:layout_constraintEnd_toEndOf="@+id/brain"
        app:layout_constraintTop_toTopOf="@+id/brain"
        android:layout_marginBottom="50dp"
        android:text="@string/menu_op2"
        android:textColor="@color/red"
        android:fontFamily="@font/gill_sans_bold"
        android:textSize="15sp">

    </Button>

    <Button
        android:id="@+id/menu_op1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/brain"
        app:layout_constraintBottom_toTopOf="@+id/brain"
        app:layout_constraintEnd_toEndOf="@+id/brain"
        app:layout_constraintTop_toBottomOf="@id/app_name"
        android:text="@string/menu_op1"
        android:textColor="@color/red"
        android:fontFamily="@font/gill_sans_bold"
        android:textSize="15sp">

    </Button>

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/apple"
        app:layout_constraintStart_toStartOf="@id/apple"
        app:layout_constraintEnd_toEndOf="@id/apple"
        app:layout_constraintTop_toTopOf="@id/apple"
        android:background="@color/transparent">
    </Button>

    <TextView
        android:id="@+id/app_name"
        android:background="@color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/menu_op1"
        android:text="@string/app_name"
        android:textColor="@color/red"
        android:fontFamily="@font/gill_sans_bold"
        android:textSize="50sp"
        android:layout_marginTop="50dp">

    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>